--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
       "core-js": "^3.8.3",
       "gh-pages": "^6.1.1",
       "vue": "^3.2.13",
-      "vue-class-component": "^8.0.0-0"
+      "vue-class-component": "^8.0.0-0",
+      "vue-i18n": "^9.14.0"
    },
    "devDependencies": {
       "@typescript-eslint/eslint-plugin": "^5.4.0",
       "@typescript-eslint/parser": "^5.4.0",
-      "@vue/cli-plugin-babel": "~5.0.0",
-      "@vue/cli-plugin-eslint": "~5.0.0",
-      "@vue/cli-plugin-typescript": "~5.0.0",
-      "@vue/cli-service": "~5.0.0",
+      "@vue/cli-plugin-babel": "~5.0.8",
+      "@vue/cli-plugin-eslint": "~5.0.8",
+      "@vue/cli-plugin-typescript": "~5.0.8",
+      "@vue/cli-service": "~5.0.8",
       "@vue/eslint-config-typescript": "^9.1.0",
       "eslint": "^7.32.0",
       "eslint-config-prettier": "^8.3.0",
