--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "big-city-life",
-   "version": "0.1.0",
+   "name": "archex",
+   "version": "0.9.0",
    "private": true,
    "scripts": {
       "serve": "vue-cli-service serve",
